# step-solana

./: .env  .gitignore  README.md  package.json  tsconfig.json
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
program/tests/: integration.rs
public/: index.html
scripts/: airdrop.ts  balance.ts  create-swap.ts  deploy-program.ts  step-crank-trade.ts  step-deposit.ts
scripts/lib/: account.ts  connection.ts  deploy.ts  transaction.ts
src/: App.less  manifest.json  routes.tsx
src/actions/: step.ts
src/components/: numericInput.tsx
src/components/AppBar/: index.tsx
src/components/CurrencyInput/: index.tsx
src/components/CurrencySelect/: index.tsx
src/components/Deposit/: index.tsx
src/components/Layout/: index.tsx
src/components/Trade/: index.tsx
src/config/: step.json  tokens.json
src/constants/: labels.ts
src/contexts/: accounts.tsx  connection.tsx  spl-token.tsx
src/hooks/: usePoolUserBalance.ts
src/models/: pool.ts  tokenSwap.ts
src/utils/: ids.ts  pools.tsx  utils.ts
src/views/: index.tsx
src/views/activity/: index.tsx
src/views/admin/: index.tsx
src/views/deposit/: index.tsx
src/views/exchange/: index.tsx
src/views/faucet/: index.tsx
src/views/home/: index.tsx
