[package]
name = "step-program"
version = "1.0.0"
edition = "2018"
publish = false

[dependencies]
solana-program = "1.5.8"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
spl-token-swap = { path = "../solana-program-library/token-swap/program", features = ["no-entrypoint"]}
byteorder = "1.4.2"
thiserror = "1.0.24"
arrayref = "0.3.6"
borsh = "0.7.1"
borsh-derive = "0.8.1"

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.8"
solana-sdk = "1.5.8"
solana-validator = "1.5.8"
tokio = { version = "0.3", features = ["macros"]}

[lib]
name = "step_finance"
crate-type = ["cdylib", "lib"]
